// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Popover Snapshots Render opened popover 1`] = `
<div>
  <div
    class="brz-ed-control__popover"
  >
    <div
      class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened brz-ed-control__popover--tooltip"
    >
      <div
        class="brz-ed-tooltip__content"
      >
        <div
          class="trigger"
        >
          trigger
        </div>
      </div>
      <div
        class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--small"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <div
          class="brz-ed-arrow brz-ed-arrow--top"
          style="position: absolute; margin: 0px;"
        />
        <div
          class="brz-ed-control__popover--content"
        >
          children
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Popover Snapshots Render popover with small tooltip and className 1`] = `
<div>
  <div
    class="brz-ed-control__popover test-classname"
  >
    <div
      class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened brz-ed-control__popover--tooltip"
    >
      <div
        class="brz-ed-tooltip__content"
      >
        <div
          class="trigger"
        >
          trigger
        </div>
      </div>
      <div
        class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--small"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <div
          class="brz-ed-arrow brz-ed-arrow--top"
          style="position: absolute; margin: 0px;"
        />
        <div
          class="brz-ed-control__popover--content"
        />
      </div>
    </div>
  </div>
</div>
`;
